<resources>
    <string name="app_name">FindMyRep</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

<!--    USER LOGIN FRAGMENT-->
    <string name="user_login__password">Password</string>
    <string name="user_login__email">Email</string>
    <string name="user_login__sign_up">Sign Up</string>
    <string name="user_login__login">Login</string>

<!--    user sign up-->
    <string name="user_login__confirm_password">Confirm Password</string>
    <string name="user_login__firstname">First Name</string>
    <string name="user_login__lastname">Last Name</string>
    <string name="user_login__address1">Address</string>
    <string name="user_login__address2">Apt/Spc/#</string>
    <string name="user_login__address3_zip">Zip Code</string>
    <string name="user_login__address3_state">State</string>

    <string name="user_login__cancel">Cancel</string>

    <!--  states  -->

    <string-array name="States">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>"Wyoming</item>
    </string-array>


<!--    user profile    -->
    <string name="user_login__user_profile">User Profile</string>
    <string name="user_profile__default_welcome">Welcome User</string>
    <string name="user_profile__signout_button">Sign Out</string>
    <string name="elections">Elections</string>


</resources>