<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.findmyrep.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_representativeList"
            app:destination="@id/navigation_rep_list" />
    </fragment>

<!--    <fragment-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:name="com.example.findmyrep.ui.dashboard.DashboardFragment"-->
<!--        android:label="@string/title_dashboard"-->
<!--        tools:layout="@layout/fragment_dashboard" />-->

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.findmyrep.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_userlogin"
        android:name="com.example.findmyrep.ui.userlogin.LoginFragment"
        android:label="@string/user_login__login"
        tools:layout="@layout/fragment_user_login" >
        <action
            android:id="@+id/action_navigation_userlogin_to_navigation_signup"
            app:destination="@id/navigation_signup"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_navigation_userlogin_to_navigation_user_profile"
            app:destination="@id/navigation_user_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.example.findmyrep.ui.usersignup.SignupFragment"
        android:label="@string/user_login__sign_up"
        tools:layout="@layout/fragment_user_signup" />

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.example.findmyrep.ui.profile.ProfileFragment"
        android:label="@string/user_login__user_profile"
        tools:layout="@layout/fragment_user_profile" />
    <fragment
        android:id="@+id/navigation_rep_info"
        android:name="com.example.findmyrep.ui.homerepinfo.RepresentativeInfo"
        android:label="representative_info_fragment"
        tools:layout="@layout/representative_info_fragment" />
    <fragment
        android:id="@+id/navigation_rep_list"
        android:name="com.example.findmyrep.ui.homereplist.RepresentativeList"
        android:label="representative_list_fragment"
        tools:layout="@layout/representative_list_fragment">
        <action
            android:id="@+id/action_representativeList_to_representativeInfo"
            app:destination="@id/navigation_rep_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_elections"
        android:name="com.example.findmyrep.ui.elections.ElectionsFragment"
        android:label="Elections"
        tools:layout="@layout/fragment_elections" >
        <action
            android:id="@+id/action_navigation_elections_to_electionCalendarFragment"
            app:destination="@id/electionCalendarFragment" />
        <action
            android:id="@+id/action_navigation_elections_to_voteMailFragment"
            app:destination="@id/voteMailFragment" />
    </fragment>
    <fragment
        android:id="@+id/voteMailFragment"
        android:name="com.example.findmyrep.ui.votebymail.VoteMailFragment"
        android:label="vote_mail_fragment"
        tools:layout="@layout/vote_mail_fragment" />
    <fragment
        android:id="@+id/electionCalendarFragment"
        android:name="com.example.findmyrep.ui.elections_calendar.ElectionCalendarFragment"
        android:label="fragment_election_calendar"
        tools:layout="@layout/fragment_election_calendar" />
</navigation>