<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userlogin.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_user_login__email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/id_user_login__password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_user_login__email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_login__email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_user_login__password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/id_user_login__login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_user_login__email"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/id_user_login__password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_login__password"
            android:importantForAutofill="no"
            android:inputType="textWebPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/id_user_login__login"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:text="@string/user_login__login"
        app:layout_constraintBottom_toTopOf="@+id/id_user_login__signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_user_login__password"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/id_user_login__signup"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:text="@string/user_login__sign_up"
        app:layout_constraintBottom_toTopOf="@+id/id_user_login__google_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_user_login__login"
        app:layout_constraintVertical_chainStyle="packed" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/id_user_login__google_sign_up"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_user_login__signup"
        app:layout_constraintVertical_chainStyle="packed" >

    </com.google.android.gms.common.SignInButton>




</androidx.constraintlayout.widget.ConstraintLayout>